# feynman-diagram-generator

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate_graph.sh  generate_graph_png.sh  make_multi_png.py
include/: bfs_dfs.hpp  graph.hpp  svg_writer.hpp  utility.hpp
src/: bfs_dfs.cpp  graph.cpp  main.cpp  svg_writer.cpp  utility.cpp
